--- a/CeylanMotors/GaleriAdmin/GaleriAdmin.csproj
+++ b/CeylanMotors/GaleriAdmin/GaleriAdmin.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NTier\Galeri.BLL\Galeri.BLL.csproj" />
     <ProjectReference Include="..\NTier\Galeri.ViewModel\Galeri.ViewModel.csproj" />
   </ItemGroup>
