--- a/CeylanMotors/NTier/Galeri.BLL/Galeri.BLL.csproj
+++ b/CeylanMotors/NTier/Galeri.BLL/Galeri.BLL.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Galeri.ViewModel\Galeri.ViewModel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Managers\Concrete\" />
+  </ItemGroup>
+
 </Project>
