--- a/CeylanMotors/GaleriClient/GaleriClient.csproj
+++ b/CeylanMotors/GaleriClient/GaleriClient.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NTier\Galeri.BLL\Galeri.BLL.csproj" />
     <ProjectReference Include="..\NTier\Galeri.ViewModel\Galeri.ViewModel.csproj" />
   </ItemGroup>
