--- a/CeylanMotors/GaleriClient/appsettings.json
+++ b/CeylanMotors/GaleriClient/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GaleriConStr": "Data Source=DESKTOP-G9J8U06;Integrated Security=True;Encrypt=True;Trust Server Certificate=True;Initial Catalog=CelanMotorsAfyonDb"
+    "GaleriConStr": "Data Source=DESKTOP-G9J8U06;Integrated Security=True;Encrypt=True;Trust Server Certificate=True;Initial Catalog=CelanMotorsAfyonDb",
+    "GaleriConStrRemote": "Data Source=94.199.202.242;User ID=ceylan;Password=Ceylan-0303;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
